# lunch-ledger

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/agent/: insights.py  lunch_agent.py  swiggy_client.py
app/bot/: blocks.py  handlers.py
app/core/: preference_aggregator.py  session_manager.py
app/db/: database.py  ledger.py
app/models/: __init__.py  schemas.py
data/: lunchleger.db
