[project]
name = "lunch-ledger"
version = "0.1.0"
description = "Team Lunch Coordinator + Food Spend Intelligence — Slack bot on Swiggy MCP"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.42.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyflakes>=3.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

